# http-server-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: channel.rs  directory_listing.rs  main.rs  style.css  threaded_archiver.rs  web.rs
