[package]
name = "http-server"
version = "0.12.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gdamjan/http-server-rs"
edition = "2018"

[dependencies]
actix-web = "3.0"
actix-files = "0.3.0"
bytes = "0.5.6"
clap = "2"
env_logger = "*"
log = "*"
futures = "0.3"
tar = "0.4"
percent-encoding = "2.0"
v_htmlescape = "0.4"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
