[package]
name = "http-server"
version = "0.13.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gdamjan/http-server-rs"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-files = "0.6.0"
bytes = "1.1.0"
clap = { version = "3.1.0", features = ["cargo"] }
env_logger = "*"
log = "*"
futures = "0.3.19"
tar = "0.4"
percent-encoding = "2.1.0"
v_htmlescape = "0.14.1"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
strip = true
codegen-units = 1
