[package]
name = "http-server"
version = "0.13.2"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gdamjan/http-server-rs"
edition = "2024"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
bytes = "1.2.1"
clap = { version = "3.2.20", features = ["cargo"] }
env_logger = "*"
log = "*"
futures = "0.3.24"
tar = "0.4.38"
percent-encoding = "2.2"
v_htmlescape = "0.15"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
strip = true
codegen-units = 1
